20131016 - fhabermann
* added subtitle, table of contents and descripion for page

20131014 - fhabermann
* added anker.js to handle ankers

20131010 - fhabermann
* added option to enable default rights for active user in permission panel
* enabled automatic set of contentid on fileupload modal

20131006 - fhabermann
* using javascript confirm to delete a file
* added acl check on delete file in html template

20130917 - fhabermann
* return user or date object on Knowledgeroot_Content
* show last change infos on content
* show create date and created by informations for content

20130916 - fhabermann
* added new class Knowledgeroot_Timezone to get timezones
* show language dropdown only for guest users
* show add group and add user in menu if you have the rights
* enable saving of personal settings
* updated gettext template
* show user date in locale format

21030915 - fhabermann
* enabled timezone handling for user in Knowledgeroot_Date
* added timezone to user session

20130913 - fhabermann
* added js to print content on open print window
* added show content action with template
* added loading version support to Knowledgeroot_Content
* added class Knowledgeroot_Db_Content_History
* added show version features to template
* added routes to show content and show versions

20130820 - fhabermann
* saving memberships

20130819 - fhabermann
* show inverse members in memberpanel

20130818 - fhabermann
* added memberpanel to group edit

20130810 - fhabermann
* added memberpanel

20130726 - fhabermann
* removed unused scripts
* doing translations

20130722 - fhabermann
* load all locales and show translation name

20130720 - fhabermann
* fixed not working change language
* added first german translation

20130719 - fhabermann
* added first stuff for memberpanel
* composer update

20130614 - fhabermann
* add home link to breadcrumb
* set light grey background
* add seperate pagetitle and subtitle
* added font awesome and changed icons

20130612 - fhabermann